some two additional properties to prevent website from unnecessary scrollbar

--- a/aplikacja/src/components/Home.module.css
+++ b/aplikacja/src/components/Home.module.css
@@ -8,7 +8,7 @@
 }
 
 .main{
-    height: 100vh;
+    height: calc(100vh - 50px);
     margin-top: 50px;
     display: flex;
     justify-content: center;
