--- a/aplikacja/src/index.css
+++ b/aplikacja/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: calc(100% - 50px);
 }
 
 code {
